--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -108,6 +108,7 @@ $medium                     : 500px;
 $medium-wide                : 550px;
 $large                      : 1200px;
 $x-large                    : 1800px;
+$xx-large                   : 3000px;
 */
 
 $small                      : 600px !default;
@@ -115,6 +116,7 @@ $medium                     : 768px !default;
 $medium-wide                : 900px !default;
 $large                      : 925px !default;
 $x-large                    : 1280px !default;
+$xx-large                    : 2560px !default;
 
 /*
    Grid
